2003-10-07  James Henstridge  <james@daa.com.au>

	* module.py (MozillaModule.do_checkout): redo checkout of mozilla
	if client.mk sticky tag is wrong.

	* cvs.py (check_sticky_tag): simple program to find the sticky tag
	for a file.

	* module.py (MozillaModule.checkout): use the code in the cvs
	module to construct the CVS command line to checkout
	mozilla/client.mk.
	(MozillaModule.checkout): rather than exiting if you can't
	checkout mozilla/client.mk, just return the error result code,
	which do_checkout() should be able to handle correctly.

	* terminal_buildscript.py (TerminalBuildScript.execute): print the
	command that is about to be executed, like it did before.

	* module.py (MozillaModule.do_checkout): construct the path
	properly, so that it checks for Makefile.in in the mozilla
	directory.

2003-10-06  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (mozilla): same here.

	* modulesets/gnome24.modules (mozilla): change attribute name.

	* module.py (read_module_set): s/branch/revision/ for
	<mozillamodule> elements.
	(MozillaModule.__init__): s/branch/revision/ here too for
	completeness.

2003-10-02  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules: readd dbus, now that hp has fixed
	the CVS root.

2003-10-01  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk_buildscript.py:
	* jhbuild.glade:
	* jhbuild.py:

	Add a "Do not build" option to the gui.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: commented-out dbus because jamesh
	thinks that the dbus anon cvs needs fixing and it'll cause problems
	for people who have used this when it is fixed.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: Added dbus.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: meta-gnome-c++: Added libgdamm and
	libgnomeprint*mm.

2003-09-30  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of ORBit2.
