@@ -268,6 +268,7 @@
   </cvsmodule>
   <cvsmodule id="gnome-panel" revision="gnome-2-4">
     <dependencies>
+      <dep package="scrollkeeper" />
       <dep package="libgnomeui" />
       <dep package="gnome-desktop" />
       <dep package="libwnck" />
@@ -282,7 +283,6 @@
   </cvsmodule>
   <cvsmodule id="gnome-applets" revision="gnome-2-4">
     <dependencies>
-      <dep package="scrollkeeper" />
       <dep package="gnome-panel" />
       <dep package="libgtop" />
       <dep package="gail" />
@@ -646,6 +646,7 @@
   </cvsmodule>
   <cvsmodule id="gcalctool" revision="gnome-2-4">
     <dependencies>
+      <dep package="scrollkeeper" />
       <dep package="libgnomeui" />
     </dependencies>
   </cvsmodule>
