@@ -273,6 +273,7 @@
   </cvsmodule>
   <cvsmodule id="gnome-panel">
     <dependencies>
+      <dep package="scrollkeeper" />
       <dep package="libgnomeui" />
       <dep package="gnome-desktop" />
       <dep package="libwnck" />
@@ -287,7 +288,6 @@
   </cvsmodule>
   <cvsmodule id="gnome-applets">
     <dependencies>
-      <dep package="scrollkeeper" />
       <dep package="gnome-panel" />
       <dep package="libgtop" />
       <dep package="gail" />
@@ -651,6 +651,7 @@
   </cvsmodule>
   <cvsmodule id="gcalctool">
     <dependencies>
+      <dep package="scrollkeeper" />
       <dep package="libgnomeui" />
     </dependencies>
   </cvsmodule>
