@@ -1,5 +1,13 @@
 2003-10-07  James Henstridge  <james@daa.com.au>
 
+	* modulesets/gnome26.modules: same changes here.
+
+	* modulesets/gnome24.modules (gcalctool): depends on scrollkeeper
+	(bug #117742).
+	(gnome-panel): move scrollkeeper dep from gnome-applets (bug #117890).
+
+	* bootstrap.py (bootstraps): update automake-1.7 to version 1.7.7.
+
 	* module.py (MozillaModule.do_checkout): redo checkout of mozilla
 	if client.mk sticky tag is wrong.
 
